[gd_scene load_steps=5 format=3 uid="uid://n5tyx1txglnt"]

[ext_resource type="Script" path="res://character_selection/character_selection_screen.gd" id="1_jceqb"]
[ext_resource type="Texture2D" uid="uid://bq81mc50hmv6o" path="res://art/bear.png" id="2_o7awh"]
[ext_resource type="Theme" uid="uid://qoufyw1po8w3" path="res://themes/secondary_button.tres" id="3_7t5bc"]
[ext_resource type="Theme" uid="uid://bq3k02vai70n2" path="res://themes/button.tres" id="3_amluj"]

[node name="Character_selection_screen" type="Node"]
script = ExtResource("1_jceqb")

[node name="Background" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = -9.0
offset_right = 1281.0
offset_bottom = 711.0
color = Color(0.201527, 0.201526, 0.201527, 1)

[node name="Choose_your_character" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -347.0
offset_top = 17.0
offset_right = 351.0
offset_bottom = 105.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Choose your character"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1282.0
offset_bottom = 714.0
size_flags_horizontal = 4

[node name="Hexagon" type="Polygon2D" parent="CenterContainer"]
position = Vector2(641, 355)
color = Color(0.654232, 0.654232, 0.654232, 1)
offset = Vector2(-53, 6)
polygon = PackedVector2Array(50, 200, -150, 140, -150, -140, 50, -200, 250, -140, 250, 140)

[node name="Character" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 110.0
offset_right = 58.0
offset_bottom = 158.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "<name>"
horizontal_alignment = 1

[node name="C_textureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -183.0
offset_right = 155.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_o7awh")
expand_mode = 1
stretch_mode = 3

[node name="Next character" type="Button" parent="."]
offset_left = 859.0
offset_top = 333.0
offset_right = 955.0
offset_bottom = 380.0
text = "Next
"

[node name="Prev character" type="Button" parent="."]
offset_left = 316.0
offset_top = 333.0
offset_right = 409.0
offset_bottom = 380.0
text = "Prev
"

[node name="Start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -120.0
offset_right = 48.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_amluj")
theme_override_font_sizes/font_size = 24
text = "START"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player.tscn")
spawn_path = NodePath("..")

[node name="Back" type="Button" parent="."]
offset_left = 44.0
offset_top = 37.0
offset_right = 180.0
offset_bottom = 85.0
theme = ExtResource("3_7t5bc")
text = "< Back"

[connection signal="pressed" from="Next character" to="." method="_on_next_character_pressed"]
[connection signal="pressed" from="Prev character" to="." method="_on_prev_character_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
